2001-09-18  Don Porter  <dgp@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): On Linux, disable inlining when
	one of the compat/*.c routines is to be linked in. [Patch 440891]

2001-09-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tcl.h: removed forced #define USE_TCLALLOC 1 for
	Windows.  This means the native system allocator will be used by
	default.  This should be binary and source compatible with
	extensions, as Tcl_Alloc is a properly stubbed function.

2001-09-17  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* generic/tclExecute.c: corrected small bug in [Patch 456668] -
	the varFramePtr was not restored in one possible exit.

2001-09-17  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* doc/tclvars.n:
	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	* generic/tclProc.c: disabled all compile and execution tracing
	functionality in standard builds; TCL_COMPILE_DEBUG is now
	necessary to enable it. [Bug 451858]

2001-09-14  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* doc/gets.n: 
	* doc/read.n: 
	* doc/puts.n: 
	* doc/flush.n: 
	* doc/fconfigure.n: 
	* doc/flush.n: 
	* doc/eof.n: 
	* doc/seek.n: 
	* doc/tell.n: 
	* doc/close.n: 
	* doc/fileevent.n: Added references to the Tcl standard
	  channels. Item [219250], reported by David LeBlanc
	  <whisper@oz.net>. Thanks to Christopher Nelson
	  <chris@pinebush.com> for doing editorial work.

2001-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* win/Makefile.in:
	* win/configure.in:
	* win/makefile.bc:
	* win/makefile.vc:
	* library/dde/pkgIndex.tcl: Fixed version numbers from bogus tcl
	  versions to independent versions for dde and registry packages.

2001-09-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCmdMZ.c (Tcl_RegsubObjCmd): had to adjust fix from
	2001-08-06 to actually duplicate the objects in certain cases.
	This is really a place where feather would have been essential.
	[Bug #461322]
